styles.css
:root {
  --Blue: hsl(223, 87%, 63%);
  --Pale-Blue: hsl(223, 100%, 88%);
  --Light-Red: hsl(354, 100%, 66%);
  --Gray: hsl(0, 0%, 59%);
  --Very-Dark-Blue: hsl(209, 33%, 12%);
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  box-sizing: border-box;
}

/* Remove default margin in favour of better control in authored CSS */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin-block-end: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
}

html,
body {
  margin: 0;
  padding: 0;
  border: 0;
}

/* Set shorter line heights on headings and interactive elements */
h1,
h2,
h3,
h4,
button,
input,
label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1,
h2,
h3,
h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  /* display: block; */
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}

body {
  font-family: "Libre Franklin", sans-serif;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}
nav {
  margin: 5rem auto 2.75rem;
}
header h1 {
  margin: 0 auto;
  color: var(--Gray);
  text-align: center;
  font-size: 3rem;
  font-weight: 300;
  line-height: 3.75rem;
}
header h1 span {
  color: var(--Very-Dark-Blue);
  font-weight: 700;
}
header .description {
  color: var(--Very-Dark-Blue);
  font-size: 1.25rem;
  font-weight: 300;
  margin: 0.9375rem auto 2.5rem;
}
#emailForm {
  margin-bottom: 5.5625rem;
}
#emailInput {
  width: 26.3125rem;
  height: 3.5rem;
  border-radius: 1.75rem;
  border: 1px solid var(--Pale-Blue);
  background: #fff;
  box-shadow: 0 0 0.4375rem 0.1875rem rgba(0, 0, 0, 0);
  padding-left: 1.875rem;
  color: var(--Pale-Blue);
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.25rem;
  margin-right: 1rem;
}
#notify-btn {
  width: 12.5rem;
  height: 3.5rem;
  flex-shrink: 0;
  border-radius: 1.75rem;
  background: var(--Blue);
  box-shadow: 0 0.3125rem 0.625rem 0.125rem rgba(76, 123, 243, 0.23);
  border-style: none;
  color: #fff;
  text-align: center;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
}
#notify-btn:hover {
  opacity: 0.8;
}
.container {
  text-align: center;
}
.error-message {
  color: var(--Light-Red);
  display: none;
  margin-top: 0.375rem;
  margin-bottom: 0;
  font-size: 0.75rem;
  font-style: italic;
  font-weight: 400;
  line-height: 1.25rem;
  letter-spacing: 0.009375rem;
  padding-right: 18.875rem;
}
#emailInput.error-input {
  border: 1px solid var(--Light-Red);
}
section img {
  width: 40rem;
  min-height: 23.9375rem;
  margin-bottom: 4.875rem;
}
.icon {
  width: 1.25rem;
  filter: invert(41%) sepia(58%) saturate(1165%) hue-rotate(197deg)
    brightness(99%) contrast(93%);
  margin-bottom: 1.875rem;
}
.icon:hover {
  cursor: pointer;
  filter: invert(60%) sepia(1%) saturate(1195%) hue-rotate(320deg)
    brightness(101%) contrast(88%);
}
footer .icons {
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
}
.copyright {
  color: var(--Gray);
  font-size: 0.75rem;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 3.0625rem;
}

@media screen and (max-width: 41.25rem) {
  nav img {
    width: 3.5rem;
  }
  nav {
    margin: 5.0625rem auto 2rem;
  }
  header h1 {
    margin: 0 auto;
    font-size: 1.375rem;
    line-height: 2rem;
  }
  header .description {
    font-size: 0.75rem;
    margin: 0.9375rem auto 2rem;
  }
  #emailForm {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 auto 4.5rem;
  }
  #emailInput,
  #notify-btn {
    display: block;
    width: 17.625rem;
    min-height: 2.5rem;
  }
  #emailInput {
    margin-bottom: 1.25rem;
    margin-right: 0;
    font-size: 0.75rem;
  }
  #notify-btn {
    font-size: 0.95rem;
  }
  .error-message {
    position: absolute;
    margin: 0;
    font-size: 10px;
    letter-spacing: 0.125px;
    padding-right: 0;
    margin-left: 2px;
  }
  section img {
    width: 20rem;
    min-height: 12rem;
    margin-bottom: 7.5rem;
  }
  .copyright {
    font-size: 0.625rem;
    margin-bottom: 2.3125rem;
  }
}

